Fix incorrect enum comparison in grilo-test-ui
../tools/grilo-test-ui/main.c:905:12: warning: comparison between ‘GrlMediaType {aka enum <anonymous>}’ and ‘enum <anonymous>’ [-Wenum-compare]
../tools/grilo-test-ui/main.c:907:12: warning: comparison between ‘GrlMediaType {aka enum <anonymous>}’ and ‘enum <anonymous>’ [-Wenum-compare]
Edited by veer