test-ui: Fix -Wenum-compare

../tools/grilo-test-ui/main.c: In function ‘supported_media_to_str’:
../tools/grilo-test-ui/main.c:905:12: warning: comparison between
‘GrlMediaType’ {aka ‘enum <anonymous>’} and ‘enum <anonymous>’
[-Wenum-compare]

   if (type == GRL_SUPPORTED_MEDIA_NONE)
            ^~

../tools/grilo-test-ui/main.c:907:12: warning: comparison between
‘GrlMediaType’ {aka ‘enum <anonymous>’} and ‘enum <anonymous>’
[-Wenum-compare]

   if (type == GRL_SUPPORTED_MEDIA_ALL)
            ^~

https://gitlab.gnome.org/GNOME/grilo/issues/7
Signed-off-by: Victor Toso <victortoso@redhat.com>